@@ -402,9 +402,15 @@ public class VennGUI {
 		bubbleB.setBounds(10, 177, 81, 14);
 		panel.add(bubbleB);
 		
-		JLabel l = new LayerItem("drag me in any textbox :)");
-		l.setBounds(1063, 131, 105, 84);
+		JLabel l = new TransferrableLabel("drag me in any textbox :)");
+		l.setBounds(1063, 128, 105, 84);
 		frame.getContentPane().add(l);
+		
+		GrabAndScrollLabel lblNewLabel = new GrabAndScrollLabel("New label");
+		lblNewLabel.setBounds(1191, 118, 49, 14);
+		frame.getContentPane().add(lblNewLabel);
+		
+	
 		
 
 	}
