@@ -13,3 +13,9 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - Icon on the JFrame
 - Set the JFrame to spawn in the middle of the screen
 - Element class to hold text content, location, and styling
+
+2020-03-24 Ahmad Faruqi
+
+##Added Functionality
+- Color label functionality
+- Drag Drop Functional (no Ghost item yet) 
